Fixed bug with outline not showing

--- a/assets/css/components/work-list.scss
+++ b/assets/css/components/work-list.scss
@@ -2,8 +2,7 @@
 
 #work-list {
     font-size: 0;
-
-    overflow: hidden;
+    overflow: visible;
 
     a {
         display: inline-block;
